Cache images per region rather than per connection.  Minor style fixes for images landing page.  Better word-wrap behavior for all landing pages (tile view).  GUI-195

--- a/koala/static/css/pages/ipaddresses.css
+++ b/koala/static/css/pages/ipaddresses.css
@@ -15,7 +15,7 @@
 .tile .header strong { font-weight: normal; }
 .tile .header .f-dropdown a { overflow: visible; }
 .tile .content { padding: 8px; font-size: 0.9em; }
-.tile .content div { margin-bottom: 2px; margin-left: 28px; }
+.tile .content div { margin-bottom: 2px; margin-left: 28px; word-break: break-all; }
 .tile .content .label { padding: 1px 3px; margin-left: -28px; background-color: #999999; margin-right: 0.2rem; font-family: Verdana, sans-serif; min-width: 22px; text-align: center; }
 .tile .content .label.ellipsis { margin-left: 0; }
 .tile .footer { position: absolute; bottom: 0; left: 0; right: 0; height: 24px; padding: 4px 4px 4px 10px; color: white; }
