--- a/koala/static/sass/includes/_landingpage.scss
+++ b/koala/static/sass/includes/_landingpage.scss
@@ -84,6 +84,7 @@ $gridwrapper-table-width: 98%;
         div {
             margin-bottom: 2px;
             margin-left: $tile-label-padding;
+            word-break: break-all;
         }
         .label {
             padding: 1px 3px;
